--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,33 +38,30 @@ Div elements
         width: 100%;
 }
 
+.centerDiv{
+        padding-left: 5%;
+        padding-right: 5%;
+}
+
+
 .searchbox{
-        display: right;
+        /* TODO */
 }
 
 .nav{
-        background: black;
         color: black;
 }
 
 .navbutton{
-        width: 25%;
         display: inline-block;
-        text-align: center;
         font-size: 18px;
         background: white;
+        padding: 1%;
 }
+
 
 .floaty{
-        color: white;
-        padding: 5px;
-}
-
-.centerDiv{
-        margin-left: 15%;
-        margin-right: 15%;
-        padding-left: 5%;
-        padding-right: 5%;
+        /* just for UI reasons */
 }
 
 .content{
@@ -72,7 +69,7 @@ Div elements
         padding-top: 5px;
         padding-bottom: 5px;
 
-        margin-top: 5px;
+        margin-top: 0px;
         margin-bottom: 5px;
 }
 
